--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,34 @@
 <resources>
     <string name="app_name">My Pantry</string>
 
+    <!-- Hint -->
+
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_full_name">Full Name</string>
+
     <!-- Login -->
 
     <string name="login_title">Login</string>
-    <string name="hint_email">Email</string>
-    <string name="hint_password">Password</string>
     <string name="btn_login">Sign in</string>
     <string name="btn_create_acc">Create Account</string>
     <string name="btn_login_google">Login With Google+</string>
     <string name="btn_login_facebook">Login With Facebook</string>
     <string name="sign_up_text">New here? Sign Up</string>
+    <string name="title_activity_main">MainActivity</string>
 
+    <!-- Main Menu -->
+
+    <string name="menu_management">Management</string>
+    <string name="menu_category">Categories</string>
+    <string name="menu_items">Items</string>
+    <string name="menu_shopping">Shopping</string>
+    <string name="menu_pantry">Pantry</string>
+
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 
 </resources>
